<resources>
    <string name="app_name">App Movil :v</string>
    <string name="app_name_label">SisGesAca</string>

    <string name="app_descripcion">\t\t\t\t Bienvenido al Sistema de Gestion Academica.\n\n
        \t El Sistema de Gestion Academica (SisGesAca) brinda\n
        los servicios de informacion que permiten procesar la\n
        información de las carreras que ofrece, los cursos que\n
        las forman, los profesores que los imparten y los alum-\n
        nos inscritos.\n\n
        \t\t\t\t\t\t Tambien ofrece la siguiente funcionalidad:
        \n\n\t Gestionar cada ciclo lectivo, para lo cual debe abrir el ciclo como tal,
        registrar la oferta académica, es decir los cursos y grupos que se van a abrir y
        los profesores que los van a impartir.
        \n\n\t Ejecutar el proceso de matrícula, en el cual se regis-\n
        tran los cursos y grupos específicos, que matricula ca-\n
        da estudiante.
        \n\n\t Realizar proceso final del ciclo, en el cual el profesor registra las
        notas que obtuvieron los estudiantes de sus grupos.
    </string>
    <!-- Strings related to login -->
    <string name="title_activity_inicio_sesion">Inicio de Sesion</string>
    <string name="prompt_usuario">Cedula</string>
    <string name="prompt_clave">Clave</string>
    <string name="action_iniciar_sesion">Ingresar</string>
    <string name="action_salir">Salir</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_usuario">Nombre de usuario invalido</string>
    <string name="error_invalid_clave">La contraseña es muy corta</string>
    <string name="error_incorrect_usuario">El usuario no existe</string>
    <string name="error_incorrect_clave">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to NavDrawer -->
    <string name="title_activity_nav_drawer">SisGesAca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sistema de Gestion Academica</string>
    <string name="nav_header_subtitle">Bienvenido!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>

    <!-- Strings related to NavDrawer Menu -->
    <string name="menu_carrera">Carreras</string>
    <string name="menu_curso">Cursos</string>
    <string name="menu_profesor">Profesores</string>
    <string name="menu_alumno">Alumnos</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>

    <!-- Strings related to Carrera -->
    <string name="title_activity_principal_carrera">Informacion Carreras</string>
    <string name="title_activity_carrera">Carrera</string>

    <string name="props_carrera_codigo_carrera">Codigo</string>
    <string name="props_carrera_nombre">Nombre</string>
    <string name="props_carrera_titulo">Titulo</string>

    <string name="empty_codigo_carrera">Codigo Requerido!</string>
    <string name="empty_carrera_nombre">Nombre Requerido!</string>
    <string name="empty_carrera_titulo">Titulo Requerido!</string>
    <!-- Strings related to Curso -->
    <string name="title_activity_principal_curso">Informacion Cursos</string>
    <string name="title_activity_curso">Curso</string>

    <string name="props_curso_codigo_curso">Codigo</string>
    <string name="props_curso_codigo_carrera">Codigo Carrera</string>
    <string name="props_curso_no_ciclo">Ciclo</string>
    <string name="props_curso_nombre">Nombre</string>
    <string name="props_curso_creditos">Creditos</string>
    <string name="props_curso_horas_semanales">Horas Semanales</string>

    <string name="empty_curso_codigo_curso">Codigo Requerido!</string>
    <string name="empty_curso_codigo_carrera">Codigo Carrera Requerido!</string>
    <string name="empty_curso_no_ciclo">Ciclo Requerido!</string>
    <string name="empty_curso_nombre">Nombre Requerido!</string>
    <string name="empty_curso_creditos">Creditos Requerido!</string>
    <string name="empty_curso_horas_semanales">Horas Semanales Requerido!</string>
    <!-- Strings related to Actions -->
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="buscar">Buscar</string>
</resources>
